[gd_scene load_steps=6 format=3 uid="uid://x84lf0x1m7n1"]

[ext_resource type="Script" uid="uid://dde5yl1jo71t4" path="res://scenes/GUI/game_main/topbar/gui_enemy_icon_button.gd" id="1_yo27m"]
[ext_resource type="PackedScene" uid="uid://duusdawcq7btt" path="res://scenes/GUI/bingo_main/character_boxes/components/gui_character_icon.tscn" id="2_krrx4"]
[ext_resource type="Shader" uid="uid://dqqjc1qluu0ig" path="res://scenes/GUI/bingo_main/character_boxes/components/gui_character_icon.gdshader" id="3_5bvwn"]
[ext_resource type="Texture2D" uid="uid://b050qlqcdkka4" path="res://resources/sprites/GUI/icons/other_icons/enemy_death_mark.png" id="4_krrx4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ab2k4"]
resource_local_to_scene = true
shader = ExtResource("3_5bvwn")
shader_parameter/has_outline = false
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/outline_size = 1.0
shader_parameter/flash = false
shader_parameter/flash_color = Color(1, 1, 1, 1)

[node name="GUIEnemyIconButton" type="PanelContainer"]
custom_minimum_size = Vector2(12, 12)
offset_right = 12.0
offset_bottom = 12.0
script = ExtResource("1_yo27m")
metadata/_custom_type_script = "uid://c42mdjgajw0gi"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 0

[node name="GUICharacterIcon" parent="MarginContainer" instance=ExtResource("2_krrx4")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ab2k4")
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
expand_mode = 1

[node name="DeathMark" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_krrx4")
expand_mode = 1
stretch_mode = 5
